ADD: joongna service config hide secret in .env file

--- a/.gitignore
+++ b/.gitignore
@@ -276,4 +276,7 @@ dist
 # Ignore code-workspaces
 *.code-workspace
 
+# Ignore .env file
+.env
+
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,node,jetbrains
