ADD: docker-compose.yml file for database FIX: Dockerfile for m1 mac (x86)

--- a/database/Dockerfile
+++ b/database/Dockerfile
@@ -1,7 +1,7 @@
-FROM mysql:5.7
+FROM --platform=linux/x86_64 mysql:5.7
 
 ADD ./mysql_init /docker-entrypoint-initdb.d
 
 EXPOSE 3306
 
-CMD["mysqld"]
+CMD ["mysqld"]
