--- a/.gitignore
+++ b/.gitignore
@@ -435,4 +435,7 @@ cython_debug/
 # Ignore code-workspaces
 *.code-workspace
 
+# Ignore .env file
+.env
+
 # End of https://www.toptal.com/developers/gitignore/api/jetbrains,visualstudiocode,python,node
