--- a/joongna/Dockerfile
+++ b/joongna/Dockerfile
@@ -1,24 +1,10 @@
 FROM golang:1.17.3
 
-ENV Xvfb :99
-ENV DISPLAY=:99
-ENV GO111MODULE=on
-
-RUN apt-get -y update
-RUN apt-get install -y wget xvfb gnupg
-
-RUN wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add -
-RUN sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google-chrome.list'
-RUN apt-get -y update
-RUN apt-get install -y google-chrome-stable
-
-RUN apt-get install -yqq unzip
-RUN wget -O /tmp/chromedriver.zip http://chromedriver.storage.googleapis.com/`curl -sS chromedriver.storage.googleapis.com/LATEST_RELEASE`/chromedriver_linux64.zip
-RUN unzip /tmp/chromedriver.zip chromedriver -d /usr/local/bin/
-
 WORKDIR /src
 COPY . /src
 
+RUN apt-get update
+RUN apt-get install -y libgconf-2-4 libatk1.0-0 libatk-bridge2.0-0 libgdk-pixbuf2.0-0 libgtk-3-0 libgbm-dev libnss3-dev libxss-dev libasound2
 RUN go build -o Joongna_api_server
 
 EXPOSE 8080
