--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,8 @@
     "@line/bot-sdk": "^7.5.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "nodemon": "^2.0.16"
+    "mysql2": "^2.3.3",
+    "nodemon": "^2.0.16",
+    "sequelize": "^6.20.0"
   }
 }
