--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
   "license": "MIT",
   "dependencies": {
     "@line/bot-sdk": "^7.5.0",
+    "axios": "^0.27.2",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "nodemon": "^2.0.16"
