--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mysql2": "^2.3.3",
+    "node-schedule": "^2.1.0",
     "nodemon": "^2.0.16",
     "sequelize": "^6.20.0"
   }
