ADD: .env_example configuration information

--- a/joongna/config/.env_example
+++ b/joongna/config/.env_example
@@ -1,3 +1,7 @@
 # Secret Configuration
-SECRET.CLIENTID=
-SECRET.CLIENTSECRET=
+SECRET.CLIENTID={NAVER_API_CLIENT_ID}
+SECRET.CLIENTSECRET={NAVER_API_CLIENT_SECRET}
+
+# Header Configuration
+HEADER.COOKIE={NID_SES=YOUR_COOKIE}
+HEADER.USERAGENT={YOUR_SYSTEM_USER_AGENT}
