--- a/server/config/config.json
+++ b/server/config/config.json
@@ -3,8 +3,8 @@
     "username": "root",
     "password": "mamuri",
     "database": "mamuri_db",
-    "host": "127.0.0.1",
-    "port": "13060",
+    "host": "mamuri-db",
+    "port": "3306",
     "dialect": "mysql"
   },
   "test": {
