--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     ports:
       - '13060:3306'
     env_file:
-      - "./database/mysql_init/.env"
+      - "../database/mysql_init/.env"
     volumes:
       - "/usr/mysql/data:/var/lib/mysql"
 
