--- a/.gitignore
+++ b/.gitignore
@@ -437,5 +437,6 @@ cython_debug/
 
 # Ignore .env file
 .env
+ngrok.yml
 
 # End of https://www.toptal.com/developers/gitignore/api/jetbrains,visualstudiocode,python,node
