HOTFIX: change charset and collate in database to utf8mb4 and utf8mb4_general_ci for korean

--- a/server/config/config.json
+++ b/server/config/config.json
@@ -6,8 +6,10 @@
     "host": "mamuri-db",
     "port": "3306",
     "dialect": "mysql",
-    "charset": "utf8",
-    "collate": "utf8_general_ci"
+    "define": {
+      "charset": "utf8mb4",
+      "collate": "utf8mb4_general_ci"
+    }
   },
   "test": {
     "username": "root",
